[package]
name = "recho"
version = "0.1.0"
edition = "2021"
authors = ["Andrew McKenzie"]
description = "A Rust version of GNU's ECHO, with added base64 functionality."
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"